--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Happy Birthday</string>
+    <string name="happy_brithday_jose">Happy Brithday Jose!</string>
+    <string name="from_pc">From PC</string>
 </resources>
